# Abstract_vm

./: CMakeLists.txt  Makefile  avm
inc/: Error.h  Error_messages.h  IOperands.h  IVm.h  lexer.h  parser.h
src/: Error.cpp  FabricMethod.cpp  IOperands.cpp  lexer.cpp  main.cpp  parser.cpp
